CSS/styles.css
.nav {
  margin-bottom: 60px;
}

.navbar-collapse {
  display: inline-block;
  justify-content: right;
}
.list-group {
  
  background-image:url('../img/squirtle-wallpaper.png');
  background-repeat: no-repeat;
  /*The background-attachment property sets whether a 
  background image scrolls with the rest of the page, or is fixed.*/
  background-attachment: fixed;
  background-position: center;
  margin-top: 60px;
  list-style-type: none;
}

.list-group-item {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding: 1px;
  background-color: transparent;
  border-top: 3px solid yellow;
  border-bottom: 3px solid yellow;
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 10px;
  background: #333;
  border-radius: 10px;
  width: 100%;
  height: 100%;
  color: #eee;
}

.list-group-item:hover {
  transform: scale(1.035);
  cursor: pointer;
}

.button-class {
  border-radius: 0;
  border: 5px;
  border-color: black;
  height: 50px;
  width: 200px;
}

#btn-to-top {
  position: fixed;
  bottom: 25px;
  right: 25px;
  background-color: var(--header-color);
  border: none;
  border-radius: 50%;
}

#modal-container {
  position: fixed;
  padding: 20px;
  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5); 
  /* to show it above other content */
  z-index: 999; 
  /* to allow scrolling if the screen is not high enough*/
  overflow: auto; 
  /* this is used to center the modal */
  display: grid;
  text-align: center;
  }

